--- a/Fr3-d1/PopUps/Edit.xaml
+++ b/Fr3-d1/PopUps/Edit.xaml
@@ -1,17 +1,12 @@
-﻿<Window x:Class="Fr3_d1.PopUps.NewStatement"
+﻿<Window x:Class="Fr3_d1.PopUps.Edit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Fr3_d1.PopUps"
-        mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen"
-        WindowStyle="None"
-        Background="{StaticResource Background}"
-        FontFamily="{StaticResource DefFont}"
-        MinWidth="800" MinHeight="450"
-        Title="NewStatement" Height="450" Width="800">
-    <Grid>
+        mc:Ignorable="d" WindowStyle="None" WindowStartupLocation="CenterScreen"
+        Title="Edit" Height="450" Width="800">
+        <Grid>
         <Grid.RowDefinitions>
         <RowDefinition Height='27'></RowDefinition>
         <RowDefinition></RowDefinition>
@@ -31,7 +26,7 @@
                 <TextBlock
                     FontFamily="{StaticResource DefFont}"
                     FontStyle="Normal" Foreground='Black' 
-                    FontSize='20' Text='Fr3-d1 v.2.0.2 - Edit a statement'></TextBlock>
+                    FontSize='20' Text='Fr3-d1 v.2.0.2 - Make a statement'></TextBlock>
             </StackPanel>
             <StackPanel HorizontalAlignment='Right' Orientation='Horizontal' >
                 <Button Click='collapse_Click' Margin='0, 2' x:Name='collapse' Width='21'>
@@ -89,25 +84,22 @@
             <TextBox Name="streg" Grid.Column="1" Grid.Row="1" Margin="10"  ></TextBox>
             <TextBox Name="stof" Grid.Column="1" Grid.Row="2" Margin="10"  ></TextBox>
             <DatePicker Name="stgivendate" Grid.Column="1" Grid.Row="3" Margin="10" Background="White" ></DatePicker>
-            <DatePicker Name="stdigdate" IsTodayHighlighted="True" IsEnabled="True" Grid.Column="1" Grid.Row="4" Margin="10" Background="White" ></DatePicker>
+            <DatePicker Name="stdigdate" IsTodayHighlighted="True" IsEnabled="False" Grid.Column="1" Grid.Row="4" Margin="10" Background="White" ></DatePicker>
             <TextBox Name="stdigby" Grid.Column="1" Grid.Row="5" Margin="10"  ></TextBox>
             <ScrollViewer  Margin="5,0" Grid.ColumnSpan="2" Grid.Row="6" ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Disabled" >
                 <StackPanel Name="tags" Orientation="Horizontal"></StackPanel>
             </ScrollViewer>
             <Grid Grid.Row="0" Margin="3" Grid.Column="2" MaxWidth="800" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.RowSpan="8">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="5*"></RowDefinition>
+                    <RowDefinition Height="22" ></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <TextBlock FontSize="16" Grid.Row="1">Detailed reasons to change this statement:</TextBlock>
                 <RichTextBox AcceptsReturn="True" AcceptsTab="True" Name="theStatement" ></RichTextBox>
+                <RichTextBox Grid.Row="2" AcceptsReturn="True" AcceptsTab="True" Name="Reason" ></RichTextBox>
             </Grid>
-            <Grid Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition Width="2*"></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition Width="2*"></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Button Name="save" Click="Save_OnClick" MaxHeight="40" Grid.Column="1">Save as a draft</Button>
-                <Button Name="send" Click="Send_OnClick" MaxHeight="40" Grid.Column="3">Finish a statement</Button>
-            </Grid>
+            <Button VerticalAlignment="Top"  HorizontalAlignment="Center" Grid.Row="7" Name="send" Click="Send_OnClick" MaxHeight="40" Grid.ColumnSpan="2" Grid.Column="0"> Suggest changes </Button>
         </Grid>
     </Grid>
 </Window>
