--- a/Fr3-d1/PopUps/Report.xaml
+++ b/Fr3-d1/PopUps/Report.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="Fr3_d1.PopUps.LogIn"
+﻿<Window x:Class="Fr3_d1.PopUps.Report"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Fr3_d1.PopUps"
-        ResizeMode="CanMinimize" WindowStyle="None" WindowStartupLocation="CenterScreen"
-        Background="{StaticResource Background}"
-        mc:Ignorable="d" FontFamily="{StaticResource DefFont}"
-        Title="LogIn" Height="150" Width="350">
+        WindowStyle="None" WindowStartupLocation="CenterScreen" ResizeMode="CanResizeWithGrip"
+        mc:Ignorable="d" Background="{StaticResource Background}"
+        Title="Report" Height="450" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height='27'></RowDefinition>
             <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBox Grid.Row="1" Background="{StaticResource Foreground}" IsReadOnly="True" Margin="1"></TextBox>
         <Grid Margin="1"
@@ -25,7 +25,7 @@
             </Grid.Background>
             <StackPanel VerticalAlignment='Center' HorizontalAlignment='Left' Orientation='Horizontal'>
                 <Image Source='/Resources/icons/eye.png' Margin="2,0,2,0" Width='25' Height='25'></Image>
-                <TextBlock Name="title" Foreground='Black' FontSize='20' Text='Log In as an Archival Assistant' > </TextBlock>
+                <TextBlock Name="title" Foreground='Black' FontSize='20' Text='Fr3-d1 - Report' > </TextBlock>
             </StackPanel>
             <StackPanel HorizontalAlignment='Right' Orientation='Horizontal' >
                 <Button Click='close_Click' Margin='2' x:Name='close' Width='21'>
@@ -39,21 +39,9 @@
                 </Button>
             </StackPanel>
         </Grid>
-        <Grid Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.5*"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <TextBlock FontSize="14" VerticalAlignment="Center" Padding="5,10,0,0" Margin="5">Login</TextBlock>
-            <TextBlock FontSize="14" Grid.Row="1" Padding="5,0,0,10" VerticalAlignment="Center" Margin="5">Password</TextBlock>
-            <TextBox FontSize="14" Name="login"  Grid.Column="1" Margin="10,10,10,5" ></TextBox>
-            <TextBox FontSize="14" Name="password" Grid.Column="1" Margin="10,5,10,10" Grid.Row="1"></TextBox>
-            <Button Grid.ColumnSpan="2" Margin="100,0,100,10" Grid.Row="2" Click="ButtonBase_OnClick">Log In</Button>
-        </Grid>
+        <TextBox IsReadOnly="True" FontSize="14" Grid.RowSpan="2" Background="{StaticResource Foreground}" Margin="1" Grid.Row="1"></TextBox>
+        <Button Click="Rep_OnClick" Name="rep" Grid.Row="3" VerticalAlignment="Top" Margin="5" HorizontalAlignment="Center" Height="30" Width="140" FontSize="14"> Report this statement</Button>
+        <TextBox Name="reason" FontSize="14" Grid.Row="1" Margin="10"></TextBox>
     </Grid>
+    
 </Window>
