--- a/Fr3-d1/PopUps/Edit.xaml
+++ b/Fr3-d1/PopUps/Edit.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:Fr3_d1.PopUps"
+        xmlns:local="clr-namespace:Fr3_d1.PopUps" Icon="/Resources/icons/eye.ico"
         mc:Ignorable="d" WindowStyle="None" WindowStartupLocation="CenterScreen"
         Title="Edit" Height="450" Width="800">
         <Grid>
