--- a/Fr3-d1/PopUps/LogIn.xaml
+++ b/Fr3-d1/PopUps/LogIn.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Fr3_d1.PopUps"
         ResizeMode="CanMinimize" WindowStyle="None" WindowStartupLocation="CenterScreen"
-        Background="{StaticResource Background}"
+        Background="{StaticResource Background}" Icon="/Resources/icons/eye.ico"
         mc:Ignorable="d" FontFamily="{StaticResource DefFont}"
         Title="LogIn" Height="150" Width="350">
     <Grid>
