--- a/Fr3-d1/PopUps/NoAccess.xaml
+++ b/Fr3-d1/PopUps/NoAccess.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Fr3_d1.PopUps"
         WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
-        Background="{StaticResource Background}"
+        Background="{StaticResource Background}" Icon="/Resources/icons/eye.ico"
         mc:Ignorable="d" FontFamily="{StaticResource DefFont}"
         Title="No Access" Height="200" Width="350">
     <Grid>
